fix: home page stretch background on 4k screens

--- a/project-installer/webapp/src/main/webapp/themes/tib/css/tenderfoot-tib.css
+++ b/project-installer/webapp/src/main/webapp/themes/tib/css/tenderfoot-tib.css
@@ -42,6 +42,7 @@ h3 {
 .icons-home {
     background-image: url('../images/bg4.jpg');
     background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .icons-home .col-md-4 {
